// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Store List component Snapshots stores empty 1`] = `
<div
  stores=""
>
  <div
    class="elevation-1"
  >
    <div
      class="v-table__overflow"
    >
      <table
        class="v-datatable v-table v-datatable--select-all theme--light"
      >
        <thead>
          <tr>
            <th>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              aria-label="Area Name: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <span>
                
        Area Name
      
              </span>
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                arrow_upward
              </i>
            </th>
            <th
              aria-label="State: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <span>
                
        State
      
              </span>
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                arrow_upward
              </i>
            </th>
            <th
              aria-label="Radius: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <span>
                
        Radius
      
              </span>
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                arrow_upward
              </i>
            </th>
            <th
              aria-label="Manage: Not sorted."
              aria-sort="none"
              class="column text-xs-left"
              role="columnheader"
              scope="col"
            >
              <span>
                
        Manage
      
              </span>
            </th>
          </tr>
          <tr
            class="v-datatable__progress"
          >
            <th
              class="column"
              colspan="5"
            />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="text-xs-center"
              colspan="5"
            >
              No matching records found
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="v-datatable v-table v-datatable--select-all theme--light"
    >
      <div
        class="v-datatable__actions"
      >
        <div
          class="v-datatable__actions__select"
        >
          Rows per page:
          <div
            class="v-input v-text-field v-select v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
            role="combobox"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
              >
                <div
                  class="v-select__slot"
                >
                  <div
                    class="v-select__selections"
                  >
                    <div
                      class="v-select__selection v-select__selection--comma"
                    >
                      10
                    </div>
                    <input
                      aria-label="Rows per page:"
                      aria-readonly="false"
                      autocomplete="on"
                      readonly="readonly"
                      type="text"
                    />
                  </div>
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                </div>
                <div
                  class="v-menu"
                >
                  <div
                    class="v-menu__content theme--light v-menu__content--auto "
                    style="max-height: 200px; min-width: 75px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                  >
                    <div
                      class="v-select-list v-card theme--light"
                    >
                      <div
                        class="v-list theme--light"
                        role="list"
                      >
                        <div
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                5
                              </div>
                            </div>
                          </a>
                        </div>
                        <div
                          class="primary--text"
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                10
                              </div>
                            </div>
                          </a>
                        </div>
                        <div
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                15
                              </div>
                            </div>
                          </a>
                        </div>
                        <div
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                25
                              </div>
                            </div>
                          </a>
                        </div>
                        <div
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                30
                              </div>
                            </div>
                          </a>
                        </div>
                        <div
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                50
                              </div>
                            </div>
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="v-datatable__actions__range-controls"
        >
          <div
            class="v-datatable__actions__pagination"
          >
            1-10 of 10
          </div>
          <button
            aria-label="Previous page"
            class="v-btn v-btn--disabled v-btn--flat v-btn--icon theme--light"
            disabled="disabled"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                chevron_left
              </i>
            </div>
          </button>
          <button
            aria-label="Next page"
            class="v-btn v-btn--disabled v-btn--flat v-btn--icon theme--light"
            disabled="disabled"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                chevron_right
              </i>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Store List component Snapshots stores set 1`] = `
<div>
  <div
    class="elevation-1"
  >
    <div
      class="v-table__overflow"
    >
      <table
        class="v-datatable v-table v-datatable--select-all theme--light"
      >
        <thead>
          <tr>
            <th>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              aria-label="Area Name: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <span>
                
        Area Name
      
              </span>
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                arrow_upward
              </i>
            </th>
            <th
              aria-label="State: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <span>
                
        State
      
              </span>
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                arrow_upward
              </i>
            </th>
            <th
              aria-label="Radius: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <span>
                
        Radius
      
              </span>
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                arrow_upward
              </i>
            </th>
            <th
              aria-label="Manage: Not sorted."
              aria-sort="none"
              class="column text-xs-left"
              role="columnheader"
              scope="col"
            >
              <span>
                
        Manage
      
              </span>
            </th>
          </tr>
          <tr
            class="v-datatable__progress"
          >
            <th
              class="column"
              colspan="5"
            />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                primary=""
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        primary=""
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </td>
             
            <td>
              <div
                class="subheading primary--text"
              >
                
          614 Parker Way
        
              </div>
            </td>
             
            <td>
              <div
                class="grey--text"
              >
                
          North Carolina
        
              </div>
            </td>
             
            <td>
              <div
                class="grey--text"
              >
                
          74
        
              </div>
            </td>
             
            <td
              class="justify-center"
            >
              <button
                class="primary v-btn v-btn--large theme--light"
                type="button"
              >
                <div
                  class="v-btn__content"
                >
                  
          Delete
        
                </div>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                primary=""
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        primary=""
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </td>
             
            <td>
              <div
                class="subheading primary--text"
              >
                
          621 Marlen Lodge Apt. 955
        
              </div>
            </td>
             
            <td>
              <div
                class="grey--text"
              >
                
          Virginia
        
              </div>
            </td>
             
            <td>
              <div
                class="grey--text"
              >
                
          45
        
              </div>
            </td>
             
            <td
              class="justify-center"
            >
              <button
                class="primary v-btn v-btn--large theme--light"
                type="button"
              >
                <div
                  class="v-btn__content"
                >
                  
          Delete
        
                </div>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                primary=""
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        primary=""
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </td>
             
            <td>
              <div
                class="subheading primary--text"
              >
                
          5203 Wintheiser Walks Suite 932
        
              </div>
            </td>
             
            <td>
              <div
                class="grey--text"
              >
                
          Texas
        
              </div>
            </td>
             
            <td>
              <div
                class="grey--text"
              >
                
          37
        
              </div>
            </td>
             
            <td
              class="justify-center"
            >
              <button
                class="primary v-btn v-btn--large theme--light"
                type="button"
              >
                <div
                  class="v-btn__content"
                >
                  
          Delete
        
                </div>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="v-datatable v-table v-datatable--select-all theme--light"
    >
      <div
        class="v-datatable__actions"
      >
        <div
          class="v-datatable__actions__select"
        >
          Rows per page:
          <div
            class="v-input v-text-field v-select v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
            role="combobox"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
              >
                <div
                  class="v-select__slot"
                >
                  <div
                    class="v-select__selections"
                  >
                    <div
                      class="v-select__selection v-select__selection--comma"
                    >
                      10
                    </div>
                    <input
                      aria-label="Rows per page:"
                      aria-readonly="false"
                      autocomplete="on"
                      readonly="readonly"
                      type="text"
                    />
                  </div>
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                </div>
                <div
                  class="v-menu"
                >
                  <div
                    class="v-menu__content theme--light v-menu__content--auto "
                    style="max-height: 200px; min-width: 75px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                  >
                    <div
                      class="v-select-list v-card theme--light"
                    >
                      <div
                        class="v-list theme--light"
                        role="list"
                      >
                        <div
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                5
                              </div>
                            </div>
                          </a>
                        </div>
                        <div
                          class="primary--text"
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                10
                              </div>
                            </div>
                          </a>
                        </div>
                        <div
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                15
                              </div>
                            </div>
                          </a>
                        </div>
                        <div
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                25
                              </div>
                            </div>
                          </a>
                        </div>
                        <div
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                30
                              </div>
                            </div>
                          </a>
                        </div>
                        <div
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                50
                              </div>
                            </div>
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="v-datatable__actions__range-controls"
        >
          <div
            class="v-datatable__actions__pagination"
          >
            1-10 of 10
          </div>
          <button
            aria-label="Previous page"
            class="v-btn v-btn--disabled v-btn--flat v-btn--icon theme--light"
            disabled="disabled"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                chevron_left
              </i>
            </div>
          </button>
          <button
            aria-label="Next page"
            class="v-btn v-btn--disabled v-btn--flat v-btn--icon theme--light"
            disabled="disabled"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                chevron_right
              </i>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
